Fri Mar 19 00:00:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (rb_big_to_f, Bignum#to_f): removed them because they are
	  unified with int_to_f and Integer#to_f.

	* numeric.c (int_to_f): treat Bignum values directly.

Fri Mar 18 23:41:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (int_to_f, fix_to_f): rename fix_to_f to int_to_f, and add
	  treatment for subclasses which don't have definitions of to_f method.

	* numeric.c (Integer#to_f, Fixnum#to_f): move to_f method from Fixnum
	  to Integer.

	* ext/-test-/integer/my_integer.rb: define helper class for testing
	  to_f method for a subclass of Integer.

	* ext/-test-/integer/extconf.rb: ditto.

	* ext/-test-/integer/init.c: ditto.

	* test/-ext-/integer/test_my_integer.rb: examine to_f method for a
	  subclass of Integer.

Fri Mar 18 22:32:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* include/ruby/intern.h (rb_big_hash): Move to internal.h.

	* internal.h: ditto.

Fri Mar 18 22:10:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (Bignum#eql?): remove its definition because it is unified
	  with Numeric#eql?.

	* numeric.c (num_eql): treat Bignum values directly.

Fri Mar 18 21:57:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (rb_big_to_s, Bignum#to_s): remove its definition because
	  it is unified with Integer#to_s.

	* numeric.c (int_to_s): treat Bignum values directly.

Fri Mar 18 21:30:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (int_to_s): Move from fix_to_s.

	* numeric.c (Integer#to_s): Move from Fixnum#to_s.

Fri Mar 18 16:22:24 2016  Victor Nawothnig  <Victor.Nawothnig@gmail.com>

	* parse.y (parse_numvar): NTH_REF must be less than a half of
	  INT_MAX, as it is left-shifted to be ORed with back-ref flag.
	  [ruby-core:74444] [Bug#12192] [Fix GH-1296]

Fri Mar 18 12:25:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (tick): fix missing close parenthesis.  [Fix GH-1291]

Fri Mar 18 10:24:12 2016  Naotoshi Seo  <sonots@gmail.com>
